styling tweaks for tags

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         {% assign posts_list = site.posts %}
         {% include posts_list.html %}
     </div>
-    <div class="one column">
+    <div class="one column sidebar">
         <p class="tags">Tags:
         {% for tag in site.tags %}
             <span class="tag"><a href="/tag/{{ tag[0] | url_encode }}">{{ tag[0] }}</a></span>
